Remove java.xml.bind from required modules when running Chatter