@@ -29,8 +29,6 @@ public class CHATRunner {
 		}
 		
 		final ProcessBuilder processBuilder = new ProcessBuilder(javaBin,
-						"--add-modules",
-						"java.xml.bind",
 						"-cp", chatter, 
 						"org.talkbank.chatter.App",
 						"-inputFormat", inputFormat,
